syntax = "proto3";

package server;

import "google/api/annotations.proto";

option go_package = "github.com/abhishekmandhare/go-grpc-rest/orders";

service OrdersAPI {
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse) {
      option (google.api.http) ={
        post: "/api/Orders"
        body:"*"
      };
    }
  }
  
  message CreateOrderRequest {
    repeated int32 nums = 1 [packed = true];
  }
  

  message CreateOrderResponse {
    int32 num = 1;
  }